mod: add business form added to contact modal, styled and js

--- a/index.html
+++ b/index.html
@@ -256,7 +256,24 @@
                         </form>
                     </div>
 
-                    <div class="add-business-form">this is the add business form</div>
+                    <div class="add-business-form">
+                        <form id="add-form">
+                            <input type="text" name="add-fullname" id="add-fullname" placeholder="Name" class="add-input-fields" required><br>
+
+                            <input type="text" name="add-number" id="add-number" placeholder="Contact Number" class="add-input-fields" required><br>
+
+                            <input type="email" name="add-emailaddress" id="add-email" placeholder="Email" class="add-input-fields" required><br>
+
+                            <input type="text" name="add-bussines-name" id="add-bussines-name" placeholder="Bussines Name" class="add-input-fields" required><br>
+
+                            <input type="text" name="add-bussines-address" id="add-bussines-address" placeholder="Bussines Address" class="add-input-fields" required><br>
+
+                            <textarea id="add-message" name="add-message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields" required></textarea><br>
+
+                            <button type="submit" id="sendbutton" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
+                        </form>
+
+                    </div>
 
                 </div>
 
