--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/google_maps.css" type="text/css" />
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_5ufwrdpLONQqmdzUjcdEi");
+        })();
+
+    </script>
+
     <title>HIKS Homepage</title>
 </head>
 
@@ -232,11 +240,11 @@
                 <div class="message-subject">
                     <h6>Please make a selection</h6>
 
-                    <input type="radio" id="gen-question" name="messagesubject" value="gen-question">
-                    <label for="gen-question">General Question</label>&nbsp;&nbsp;
+                    <input type="radio" id="gen_question" name="messagesubject" value="General Question">
+                    <label for="gen_question">General Question</label>&nbsp;&nbsp;
 
-                    <input type="radio" id="add-business" name="messagesubject" value="add-business">
-                    <label for="add-business">Add A Business</label>
+                    <input type="radio" id="add_business" name="messagesubject" value="Add A Business">
+                    <label for="add_business">Add A Business</label>
                 </div>
 
                 <!-- Modal body -->
@@ -244,33 +252,33 @@
 
                     <div class="gen-question-form">
                         <form id="gen-form">
-                            <input type="text" name="gen-fullname" id="gen-fullname" placeholder="Name" class="gen-input-fields" required><br>
+                            <input type="text" name="gen_fullname" id="gen_fullname" placeholder="Name" class="gen-input-fields"><br>
 
-                            <input type="email" name="gen-emailaddress" id="gen-email" placeholder="Email" class="gen-input-fields" required><br>
+                            <input type="email" name="gen_emailaddress" id="gen_email" placeholder="Email" class="gen-input-fields"><br>
 
-                            <input type="text" name="gen-subject" id="gen-subject" placeholder="Subject" class="gen-input-fields" required><br>
+                            <input type="text" name="gen_subject" id="gen_subject" placeholder="Subject" class="gen-input-fields"><br>
 
-                            <textarea id="gen-message" name="gen-message" placeholder="Message" rows="7" class="gen-input-fields" required></textarea><br>
+                            <textarea id="gen_message" name="gen_message" placeholder="Message" rows="7" class="gen-input-fields"></textarea><br>
 
-                            <button type="submit" id="sendbutton" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
+                            <button type="submit" id="sendbutton-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
                         </form>
                     </div>
 
                     <div class="add-business-form">
                         <form id="add-form">
-                            <input type="text" name="add-fullname" id="add-fullname" placeholder="Name" class="add-input-fields" required><br>
+                            <input type="text" name="add_fullname" id="add_fullname" placeholder="Name" class="add-input-fields"><br>
 
-                            <input type="text" name="add-number" id="add-number" placeholder="Contact Number" class="add-input-fields" required><br>
+                            <input type="text" name="add_number" id="add_number" placeholder="Contact Number" class="add-input-fields"><br>
 
-                            <input type="email" name="add-emailaddress" id="add-email" placeholder="Email" class="add-input-fields" required><br>
+                            <input type="email" name="add_emailaddress" id="add_email" placeholder="Email" class="add-input-fields"><br>
 
-                            <input type="text" name="add-bussines-name" id="add-bussines-name" placeholder="Bussines Name" class="add-input-fields" required><br>
+                            <input type="text" name="add_bussines_name" id="add_business_name" placeholder="Bussines Name" class="add-input-fields"><br>
 
-                            <input type="text" name="add-bussines-address" id="add-bussines-address" placeholder="Bussines Address" class="add-input-fields" required><br>
+                            <input type="text" name="add_bussines_address" id="add_business_address" placeholder="Bussines Address" class="add-input-fields"><br>
 
-                            <textarea id="add-message" name="add-message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields" required></textarea><br>
+                            <textarea id="add_message" name="add_message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields"></textarea><br>
 
-                            <button type="submit" id="sendbutton" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
+                            <button type="submit" id="sendbutton-add" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
                         </form>
 
                     </div>
@@ -293,6 +301,7 @@
     <!--My JS Files-->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/googlemaps.js"></script>
+    <script src="assets/js/sendemail.js"></script>
 
 </body>
 
