--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/google_maps.css" type="text/css" />
 
+    <!--This is for the EmailJS API browser integration for my modal contact forms-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
@@ -226,17 +227,22 @@
     <!--Back to top button-->
     <a id="to-top-btn" class="hvr-sweep-to-bottom hvr-pulse"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
 
-    <!-- The Modal -->
+    <!--Here I have created a modal contact form using bootstraps modal. I have used the code and then modified it to what i needed it to be and that is a two seperate contact forms. The first form is for general questions and the second form is for adding a business for my local search page. Both forms are linked to the EmailJS API but because i am using the free servie they are sharing the same email template.-->
+
+    <!--My Modal Contact Forms-->
     <div class="modal fade" id="contact-modal">
         <div class="modal-dialog">
             <div class="modal-content">
 
-                <!-- Modal Header -->
+                <!--Modal Header-->
                 <div class="modal-header">
                     <h4 class="modal-title">Contact Me</h4>
+
+                    <!--Close Contact Modal Button-->
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
+                <!--Modal Subject Header-->
                 <div class="message-subject">
                     <h6>Please make a selection</h6>
 
@@ -247,44 +253,51 @@
                     <label for="add_business">Add A Business</label>
                 </div>
 
-                <!-- Modal body -->
+                <!--Modal Main body-->
                 <div class="modal-body">
 
+                    <!--General Question Contact Form-->
                     <div class="gen-question-form">
                         <form id="gen-form">
-                            <input type="text" name="gen_fullname" id="gen_fullname" placeholder="Name" class="gen-input-fields"><br>
+                            <input type="text" name="gen_fullname" id="gen_fullname" placeholder="Name" class="gen-input-fields" required><br>
 
-                            <input type="email" name="gen_emailaddress" id="gen_email" placeholder="Email" class="gen-input-fields"><br>
+                            <input type="email" name="gen_emailaddress" id="gen_email" placeholder="Email" class="gen-input-fields" required><br>
 
-                            <input type="text" name="gen_subject" id="gen_subject" placeholder="Subject" class="gen-input-fields"><br>
+                            <input type="text" name="gen_subject" id="gen_subject" placeholder="Subject" class="gen-input-fields" required><br>
 
-                            <textarea id="gen_message" name="gen_message" placeholder="Message" rows="7" class="gen-input-fields"></textarea><br>
+                            <textarea id="gen_message" name="gen_message" placeholder="Message" rows="7" class="gen-input-fields" required></textarea><br>
 
+                            <!--Send Form Button-->
                             <button type="submit" id="sendbutton-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
+
+                            <!--Reset Form Button-->
+                            <button type="reset" id="clear-form" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
                         </form>
                     </div>
 
+                    <!--Add A Business Contact Form-->
                     <div class="add-business-form">
                         <form id="add-form">
-                            <input type="text" name="add_fullname" id="add_fullname" placeholder="Name" class="add-input-fields"><br>
+                            <input type="text" name="add_fullname" id="add_fullname" placeholder="Name" class="add-input-fields" required><br>
 
-                            <input type="text" name="add_number" id="add_number" placeholder="Contact Number" class="add-input-fields"><br>
+                            <input type="text" name="add_number" id="add_number" placeholder="Contact Number" class="add-input-fields" required><br>
 
-                            <input type="email" name="add_emailaddress" id="add_email" placeholder="Email" class="add-input-fields"><br>
+                            <input type="email" name="add_emailaddress" id="add_email" placeholder="Email" class="add-input-fields" required><br>
 
-                            <input type="text" name="add_bussines_name" id="add_business_name" placeholder="Bussines Name" class="add-input-fields"><br>
+                            <input type="text" name="add_bussines_name" id="add_business_name" placeholder="Bussines Name" class="add-input-fields" required><br>
 
-                            <input type="text" name="add_bussines_address" id="add_business_address" placeholder="Bussines Address" class="add-input-fields"><br>
+                            <input type="text" name="add_bussines_address" id="add_business_address" placeholder="Bussines Address" class="add-input-fields" required><br>
 
-                            <textarea id="add_message" name="add_message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields"></textarea><br>
+                            <textarea id="add_message" name="add_message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields" required></textarea><br>
 
+                            <!--Send Form Button-->
                             <button type="submit" id="sendbutton-add" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
+
+                            <!--Reset Form Button-->
+                            <button type="reset" id="clear-form" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
                         </form>
-
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
@@ -300,8 +313,11 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY5zt-488Aq3MH-93TXudTj4sCSoa5N6o&callback=initMap&libraries=places,geometry&v=weekly" async></script>
     <!--My JS Files-->
     <script src="assets/js/script.js"></script>
+    <!--My General JS Script-->
     <script src="assets/js/googlemaps.js"></script>
+    <!--My JS Script for the Google Maps/Places API-->
     <script src="assets/js/sendemail.js"></script>
+    <!--My JS Script for my contact modal forms-->
 
 </body>
 
