--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
                     <a class="nav-link active-nav hvr-sweep-to-bottom hvr-pulse" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
+                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
                     <a class="nav-link hvr-sweep-to-bottom hvr-pulse" href="locals.html">Locals</a>
                 </li>
                 <li class="nav-item">
+                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
                     <a class="nav-link hvr-sweep-to-bottom hvr-pulse contact-me" href="#" data-toggle="modal" data-target="#contact-modal">Contact</a>
                 </li>
 
@@ -66,7 +69,7 @@
 
     <!--This block of code below is for the main section of my html and i used the bootstrap grid sytem to create a fluid container, then a row and last the columns that i needed-->
     <main class="google-search">
-        <div class="container-fluid main-con">
+        <div class="container-fluid">
             <div class="row">
 
                 <!--Here is the first column i created for the first of the google map search, i created a drop down list of countries so a user can select a country that they want to search a tradesperson in-->
@@ -193,7 +196,7 @@
                 <div class="col-lg-3 quick-links">
                     <h5 id="quick-links-heading">quick links</h5>
                     <h6 id="localsearch-link"><a href="locals.html" class="hvr-sweep-to-bottom hvr-pulse">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
-                    <h6 id="contactme-link"><a href="contact.html" class="hvr-sweep-to-bottom hvr-pulse">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
+                    <h6 id="contactme-link"><a href="#" class="hvr-sweep-to-bottom hvr-pulse" data-toggle="modal" data-target="#contact-modal">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
                 </div>
 
                 <!--Two Empty Space Columns-->
@@ -246,9 +249,11 @@
                 <div class="message-subject">
                     <h6>Please make a selection</h6>
 
+                    <!--Radio button for General question subject-->
                     <input type="radio" id="gen_question" name="messagesubject" value="General Question">
                     <label for="gen_question">General Question</label>&nbsp;&nbsp;
 
+                    <!--Radio button for Add a business subject-->
                     <input type="radio" id="add_business" name="messagesubject" value="Add A Business">
                     <label for="add_business">Add A Business</label>
                 </div>
@@ -311,13 +316,14 @@
     <!--Google API Files-->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY5zt-488Aq3MH-93TXudTj4sCSoa5N6o&callback=initMap&libraries=places,geometry&v=weekly" async></script>
+
     <!--My JS Files-->
-    <script src="assets/js/script.js"></script>
     <!--My General JS Script-->
-    <script src="assets/js/googlemaps.js"></script>
+    <script src="assets/js/script.js"></script>
     <!--My JS Script for the Google Maps/Places API-->
-    <script src="assets/js/sendemail.js"></script>
+    <script src="assets/js/googlemaps.js"></script>
     <!--My JS Script for my contact modal forms-->
+    <script src="assets/js/sendemail.js"></script>
 
 </body>
 
