mod: added info table to html, css and js constructor

--- a/index.html
+++ b/index.html
@@ -263,7 +263,52 @@
                 <div class="col-lg-4 card electrician-1 category_electric city-stalbans">
                     <h2 id="business_heading">Electrician St Albans</h2>
                     <div class="business_icon"><i class="fas fa-bolt"></i></div>
-                    <p id="electrician-info-1">Business Info Here</p>
+                    <div id="electrician-info-1">
+
+                        <table class="elec-tb1">
+                            <tr>
+                                <td class="attrib-col1">
+                                    <h5>Address:</h5>
+                                </td>
+                                <td class="attrib-col2">
+                                    <h5 id="elec1-add"></h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="attrib-col1">
+                                    <h5>Number:</h5>
+                                </td>
+                                <td class="attrib-col2">
+                                    <h5 id="elec1-num"></h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="attrib-col1">
+                                    <h5>Email:</h5>
+                                </td>
+                                <td class="attrib-col2">
+                                    <h5 id="elec1-email"></h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="attrib-col1">
+                                    <h5>Website:</h5>
+                                </td>
+                                <td class="attrib-col2">
+                                    <h5 id="elec1-url"></h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="attrib-col1">
+                                    <h5>Social:</h5>
+                                </td>
+                                <td class="attrib-col2">
+                                    <h5 id="elec1-social"></h5>
+                                </td>
+                            </tr>
+                        </table>
+
+                    </div>
                     <button id="more-button-1" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
                     <button id="less-button-1" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
                 </div>
